major update
add gitignor